@@ -80,6 +80,16 @@ public method close {} {
 	unset conn
 }
 
+# ----------------------------------------------------------------------
+# method - close - Close the database connection.
+#
+#
+#
+# ----------------------------------------------------------------------
+public method quote {val} {
+	return [mysql::escape $conn $val]
+}
+
 
 # ----------------------------------------------------------------------
 #
