@@ -1,6 +1,7 @@
 Version: 0.1.3
 Date: 2013-
   1. Closing connection in the destructor of connectivity impl. classes 
+  2. Automatic quoting/escaping of values - one of the measure to avoid SQL injection
 Version: 0.1.2
 Date: 2013-10-20
   1. Improved NULL handling
